--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   width: 300px;
   background-color: hsl(0, 0%, 100%);
   border-radius: 20px;
+  box-shadow: 0px 10px 30px 2px hsl(220, 15%, 55%);
 }
 
 .text {
